After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752346 - JNI: unused event listener warnings in jaw_util
JNI: unused event listener warnings in jaw_util
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
0.33.x
Other Linux
: Normal normal
: ---
Assigned To: Magdalen Berns (irc magpie)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-07-13 19:55 UTC by Magdalen Berns (irc magpie)
Modified: 2015-07-14 00:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
JNI: fix unused event listener warnings in jaw_util (1.80 KB, patch)
2015-07-13 20:10 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-07-13 19:55:09 UTC
It seems like some declarations were not completely cleaned away with bug 751267. These should be removed as they are not being used.
Comment 1 Magdalen Berns (irc magpie) 2015-07-13 20:10:32 UTC
Created attachment 307366 [details] [review]
JNI: fix unused event listener warnings in jaw_util