JNI: fix unused event listener warnings in jaw_util

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=752346